# Avocado-API

./: .env.bot.example  .env.poster.example  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  clean_empty_files.py  create_database.py  create_module_structure.py  docker-compose.yml  docker-entrypoint.sh  fix_bonus_function.sql  fix_bonus_function_v2.sql  fix_bonus_function_v3.sql  fix_bonus_function_v4_eng.sql  fix_bonus_function_v5_ukr.sql  implementation_guide.md  init_db.py  pyproject.toml  requirements.txt  run.py  run_telegram_bot.py  setup_local_dev.bat  stack.env  test_trigger.sql
.claude/: settings.local.json
alembic/: env.py
analysis/: README.md  bonus_analysis.py  check_client.py  check_client_phones.py  check_transactions_structure.py  clients_behavior_analysis.py  comprehensive_sales_analysis.py  corrected_bonus_analysis.py  deep_duplicate_analysis.py  detailed_phone_analysis.py  extended_phone_analysis.py  html_report_generator.py  phone_cleanup.py  poster_sync_scheduler.py  products_sales_analysis.py  report_config.py  run_analysis.py  run_analysis_html.py  sales_by_spots_analysis.py  sales_trends_analysis.py  simple_bonus_analysis.py  sync_poster_month.py  sync_poster_products.py  test_client_api.py  test_datetime_parsing.py  test_full_client_sync.py  test_poster_sync.py  test_transaction_details.py
docs/: DATABASE_SETUP.md  telegram_bot_analysis.md
postgresDB/: README.md  README_BONUS_SYSTEM.md  bonus_triggers.sql  business_analytics_functions.sql  deploy_functions.py  discount_calculation_functions.sql  discount_triggers.sql  redis.conf  (+14 more)
(+302 files in other folders)
